# face-utils

./: CMakeLists.txt  README.md
lib/: face_detector.cpp  face_detector.hpp  face_utils.hpp  facial_landmark_detector.cpp  facial_landmark_detector.hpp  includes.ihh
python/: dlib_face_detection.py  dnn_face_detection.py  face_aligner.py  face_detection.py  facial_aligner.py  facial_landmark_detection.py  platform_face_detection.py
src/: face_detection.cpp
